--- a/Kolmogorov Arnold Representation (Kan)/KAN.ipynb
+++ b/Kolmogorov Arnold Representation (Kan)/KAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,18 @@
     "# Visualization\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "from wordcloud import WordCloud"
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Neuron:\n",
+    "\n",
+    "    "
    ]
   }
  ],
